--- a/app/views/teams/_form.html.haml
+++ b/app/views/teams/_form.html.haml
@@ -11,6 +11,10 @@
     = f.text_field :label, class: "form-control"
 
   .form-group
+    %label Couleur
+    = f.text_field :color, class: "form-control colorpicker"
+
+  .form-group
     %label Description
     = f.text_field :description, class: "form-control"
 
