--- a/app/views/pages/_scripts.html.erb
+++ b/app/views/pages/_scripts.html.erb
@@ -2,6 +2,13 @@
   $(document).ready(function(){
     $('#calendar').fullCalendar({
       lang: 'fr',
+      header: {
+        left: 'prev, next, today',
+        center: 'title',
+        right: 'month,agendaWeek,agendaDay,listWeek'
+      },
+      navLinks: true,
+      eventLimit: true,
       eventSources: [
         <% @teams.each do |team| %>
           {
