--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -24,12 +24,20 @@
         %tbody
           - @users.each do |user|
             %tr
-              %td= user.name
+              %td
+                = user.name
+                \-
+                = link_to [user, :events], class: 'text-small' do
+                  Consulter son planning
               %td= user.email
               - if can? :update, User
                 %td
                   = icon "#{(user.invitation_accepted_at.blank?) ? 'times' : 'check'}"
               %td
+                - if user.invitation_accepted_at.blank?
+                  = link_to user_invite_path(user), class: "btn btn-flat btn-info btn-xs" do
+                    = icon "paper-plane"
+                    Envoyer une invitation
                 - if can? :update, user
                   = link_to edit_user_path(user), class: "btn btn-flat btn-success btn-xs" do
                     = icon "edit"
