--- a/app/views/users/events/_scripts.html.erb
+++ b/app/views/users/events/_scripts.html.erb
@@ -10,14 +10,14 @@
       navLinks: true,
       eventLimit: true,
       eventSources: [
-        <% user.teams.each do |team| %>
+        <% @teams.each do |team| %>
           {
             url: "/teams/<%=team.id%>/events.json?user_id=<%=current_user.id%>",
             color: "<%= (team.color.blank?) ? '#f5fef1' : team.color %>"
           },
         <% end %>
         {
-          url: "/users/<%= user.id %>/events.json",
+          url: "/users/<%= current_user.id %>/events.json",
           color: "#55dd55"
         }
       ]
