--- a/app/views/events/edit.html.haml
+++ b/app/views/events/edit.html.haml
@@ -2,7 +2,7 @@
   %h1
     Mon planning
     %small
-      = icon "angle-right"
+      = fa_icon "angle-right"
       Planning
 
 %section.content
@@ -10,7 +10,7 @@
     .box-header
       .box-tools
         = link_to @event, method: :delete, data:{confirm: "Voulez vous vraiment supprimer cet événement ?"}, class: "btn btn-sm btn-danger" do
-          = icon "trash"
+          = fa_icon "trash"
           Supprimer
     .box-body
       = render 'form', event: @event
