--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -5,7 +5,7 @@
   - if can? :create, User
     .actions
       = link_to new_user_invitation_path, class: "btn btn-flat btn-primary" do
-        = icon "plus"
+        = fa_icon "plus"
         Ajouter
 
 %section.content
@@ -32,19 +32,19 @@
               %td= user.email
               - if can? :update, User
                 %td
-                  = icon "#{(user.invitation_accepted_at.blank?) ? 'times' : 'check'}"
+                  = fa_icon "#{(user.invitation_accepted_at.blank?) ? 'times' : 'check'}"
               %td
                 - if user.invitation_accepted_at.blank?
                   = link_to user_invite_path(user), class: "btn btn-flat btn-info btn-xs" do
-                    = icon "paper-plane"
+                    = fa_icon "paper-plane"
                     Envoyer une invitation
                 - if can? :update, user
                   = link_to edit_user_path(user), class: "btn btn-flat btn-success btn-xs" do
-                    = icon "edit"
+                    = fa_icon "edit"
                     Modifier
                 - if can? :delete, user
                   = link_to user, method: :delete, data:{confirm: "Êtes vous sûr de vouloir supprimer cette équipe ?"}, class: "btn btn-flat btn-danger btn-xs" do
-                    = icon "trash"
+                    = fa_icon "trash"
                     Supprimer
 
       = will_paginate @users, renderer: BootstrapPagination::Rails, next_label: ">", previous_label: "<"
