--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,7 +1,7 @@
 %section.content-header
   %h1
-    Membres
-    %small Modifier un membre
+    Bénévoles
+    %small Modifier un bénévole
 
 %section.content
   .box
