--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,7 +1,7 @@
 %section.content-header
   %h1
-    Membres
-    %small Liste des membres
+    Bénévoles
+    %small Liste des Bénévoles
   - if can? :create, User
     .actions
       = link_to new_user_invitation_path, class: "btn btn-flat btn-primary" do
