public access member

--- a/app/views/layouts/public.html.haml
+++ b/app/views/layouts/public.html.haml
@@ -11,7 +11,7 @@
         %nav.navbar.navbar-static-top
           .container
             .navbar-header
-              = link_to public_root_path, class: 'navbar-brand' do
+              = link_to '/public', class: 'navbar-brand' do
                 Eglise de
                 %b Blois
               %button.navbar-toggle.collapsed{"data-target" => "#navbar-collapse", "data-toggle" => "collapse", :type => "button"}
