--- a/app/views/public/pages/home.html.haml
+++ b/app/views/public/pages/home.html.haml
@@ -3,7 +3,7 @@
     Prise de contact
   %ol.breadcrumb
     %li
-      = link_to public_root_path do
+      = link_to '/public' do
         %i.fa.fa-dashboard
         Accueil
 
