--- a/app/views/layouts/mailer.html.haml
+++ b/app/views/layouts/mailer.html.haml
@@ -2,8 +2,8 @@
 %html
   %head
     %title ADD Blois - Gestion des plannings
-  %body{:style => "background:#eaedf1;font-family:Helvetica"}
-    %table{:style => "width:60%;min-width:450px;max-width:700px;margin:0 auto;background:#eaedf1;"}
+  %body{:style => "background:#f5f5f5;font-family:Helvetica"}
+    %table{:style => "width:60%;min-width:450px;max-width:700px;margin:0 auto;background:#f5f5f5;"}
       %tr
         %td{style: "height:20px;"}
       %tr
@@ -11,8 +11,8 @@
           %table{style: "width:100%; height:100px;"}
             %tr
               %td{style: "width:120px; padding: 0 20px;"}
-                = link_to root_url, style: "color: #fff; font-size: 22px; font-weight:700; text-decoration: none;" do
-                  Eglise Evangélique  de Blois - Gestion des plannings
+                = link_to root_url, style: "display:block; color: #fff; font-size: 22px; font-weight:700; text-decoration: none; text-align: center" do
+                  Eglise Evangélique de Blois
 
       %tr
         %td{:style => "background:#fff;padding:10px 20px;"}
@@ -21,3 +21,5 @@
         %td{:style => "background:#2857be;text-align:left;height:35px; line-height:35px;border-top:solid 5px #93a0ea; padding:0 20px;"}
           = link_to 'http://eglisedeblois.fr', :style => "font-size:12px;text-decoration:none; width:100%; line-height:15px; color:#fff; font-weight:700; padding: 0 5px 0 0" do
             ADD Blois
+      %tr
+        %td{style: "height:20px;"}
