--- a/app/views/mailer/send_access_link.html.haml
+++ b/app/views/mailer/send_access_link.html.haml
@@ -32,7 +32,9 @@
       = public_member_url(token: @token)
 
 %p{style: "font-size:14px;line-height:18px;"}
-  Merci de garder précieusement cet email afin de tenir vos informations à jour, un nouvel email pourra vous être envoyé sur simple demande.
+  Merci de garder précieusement cet email afin de tenir vos informations à jour.
+  %br
+  Un nouvel email pourra vous être envoyé sur simple demande.
 
 %p{style: "font-size:14px;line-height:18px;"}
   Que Dieu vous bénisse,
