--- a/app/views/public/pages/home.html.haml
+++ b/app/views/public/pages/home.html.haml
@@ -100,8 +100,8 @@
 
           .col-md-6
             .callout.callout-info
-              %h4 Vous pouvez également inscrire votre famille
-              %p Pour cela, il vous suffit de selectionner "Créer un famille" ou de choisir la famille correspondante.
+              %h4 Vous pouvez également vous inscrire en famille.
+              %p Pour cela, il vous suffit de selectionner votre famille si elle a déjà été créée ou de sélectionner "Créer une famille" sinon.
             %h3 Info sur la famille
             = f.fields_for :sibling do |family_form|
               .form-group
