--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -17,6 +17,12 @@
           = fa_icon "leaf"
           %span Bénévoles
 
+    - if can? :manage, Event
+      %li{class: "#{'active' if params[:controller].match(/events/)}"}
+        = link_to events_url do
+          = fa_icon "calendar"
+          %span Evenements
+
     - if can? :read, Member
       %li.treeview{class: "#{'active menu-open' if params[:controller].match(/members|families/)}"}
         = link_to '#' do
