--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -11,6 +11,18 @@
     .col-md-4
       .box
         .box-body
+          %h3.page-header Légende
+          %ul.list-unstyled
+            - @teams.each do|team|
+              %li
+                = fa_icon "square", style: "color: #{team.color}"
+                = team.label
+            %li
+              = fa_icon "square", style: "color: #000"
+              Évènements publics
+
+          %hr
+
           .form-group
             %label Importer mon calendrier dans Google Agenda
             = text_field_tag :import, :import, value: schedule_url(current_user.id, format: :ics), class: "form-control readonly", readonly: true
